test(JUnit): Add metadata in test cases
[PAGOPA-2480]