@@ -10,13 +10,17 @@ import it.gov.pagopa.debtposition.TestUtil;
 import it.gov.pagopa.debtposition.model.enumeration.DebtPositionStatus;
 import it.gov.pagopa.debtposition.model.enumeration.Type;
 import it.gov.pagopa.debtposition.model.pd.DebtorModel;
+import it.gov.pagopa.debtposition.model.pd.TransferMetadataModel;
 import it.gov.pagopa.debtposition.model.pd.TransferModel;
+import it.gov.pagopa.debtposition.model.v3.InstallmentMetadataModel;
 import it.gov.pagopa.debtposition.model.v3.InstallmentModel;
 import it.gov.pagopa.debtposition.model.v3.PaymentOptionModelV3;
 import it.gov.pagopa.debtposition.model.v3.PaymentPositionModelV3;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.hamcrest.core.IsNull;
@@ -196,8 +200,7 @@ class DebtPositionControllerV3Test {
     mvc.perform(post(positionUri).content(TestUtil.toJson(ppv3))).andExpect(status().isOk());
   }
 
-  // ############################################ UTILS
-  // #######################################################
+  // ################### UTILS #################
 
   private PaymentPositionModelV3 createPaymentPositionV3(int numberOfPO, int numberOfInstallment) {
     PaymentPositionModelV3 paymentPosition = new PaymentPositionModelV3();
@@ -231,7 +234,20 @@ class DebtPositionControllerV3Test {
     inst.setAmount(100L);
     inst.setDescription("Description");
     inst.setDueDate(LocalDateTime.now().plusDays(60));
+    ArrayList<InstallmentMetadataModel> instMetadataList =
+        new ArrayList<>(
+            Arrays.asList(
+                new InstallmentMetadataModel("key1", "value1"),
+                new InstallmentMetadataModel("key2", "value2")));
+    inst.setInstallmentMetadata(instMetadataList);
 
+    TransferModel transfer = getTransferModel();
+    inst.setTransfer(List.of(transfer));
+
+    return inst;
+  }
+
+  private static TransferModel getTransferModel() {
     TransferModel transfer = new TransferModel();
     transfer.setIdTransfer("1");
     transfer.setCompanyName("CompanyName");
@@ -239,8 +255,12 @@ class DebtPositionControllerV3Test {
     transfer.setAmount(100L);
     transfer.setRemittanceInformation("remittance information");
     transfer.setCategory("10/22252/20");
-    inst.setTransfer(List.of(transfer));
-
-    return inst;
+    ArrayList<TransferMetadataModel> transferMetadataList =
+        new ArrayList<>(
+            Arrays.asList(
+                new TransferMetadataModel("key1", "value1"),
+                new TransferMetadataModel("key2", "value2")));
+    transfer.setTransferMetadata(transferMetadataList);
+    return transfer;
   }
 }
